# JODA

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  Gemfile  LICENSE  README.md  _config.yml  getting-started.markdown  index.markdown  install.markdown  language.markdown  udm.markdown
apps/client/: CMakeLists.txt  README.md
apps/client/src/: client.cpp
apps/joda/: CMakeLists.txt  joda.cpp
libs/joda/client/: CMakeLists.txt  module-doc.h
libs/joda/client/include/joda/: JodaClient.h
libs/joda/client/src/: CursesFWD.h  JodaClient.cpp  QueryRequest.cpp  QueryRequest.h  ResultRequest.cpp  ResultRequest.h
libs/joda/core/: CMakeLists.txt  core-doc.h
libs/joda/core/include/joda/: version.h.in
libs/joda/core/modules/: init_module.sh
libs/joda/core/modules/cli/: CMakeLists.txt  module-doc.h
libs/joda/core/modules/cli/src/: BasicCLI.cpp  CLI.cpp  CLICompletion.cpp  CLICompletion.h  CursesFWD.h  CursesHandler.h  JSONInterface.cpp  JSONInterface.h  ResultInterface.cpp  ResultInterface.h
libs/joda/core/modules/concurrency/: CMakeLists.txt
libs/joda/core/modules/concurrency/src/: ThreadManager.cpp
libs/joda/core/modules/config/: CMakeLists.txt
libs/joda/core/modules/config/src/: ConfigParser.cpp  config.cpp
libs/joda/core/modules/export/: CMakeLists.txt
libs/joda/core/modules/export/src/: DirectoryExport.cpp  FileExport.cpp  JSONStringifier.cpp  JoinExport.cpp  StorageExport.cpp  StreamExport.cpp
libs/joda/core/modules/extension/: CMakeLists.txt
libs/joda/core/modules/extension/src/: ModuleExecutorStorage.cpp  ModuleRegister.cpp
libs/joda/core/modules/extension/src/python/: PythonAggregator.cpp  PythonExecutor.cpp  PythonExport.cpp  PythonImportSource.cpp  PythonImportTask.cpp  PythonModule.cpp  PythonValueProvider.cpp
libs/joda/core/modules/filesystem/: CMakeLists.txt  module-doc.h
libs/joda/core/modules/filesystem/src/: DirectoryFileScanner.cpp  DirectoryRegister.cpp
libs/joda/core/modules/filesystem/test/: DirectoryFileScannerTest.cpp
libs/joda/core/modules/indexing/: CMakeLists.txt
libs/joda/core/modules/indexing/src/adaptive/: AdaptiveHistogram.cpp  AdaptiveHistogram.h  AdaptiveIndexManager.cpp  AdaptiveIndexQuery.cpp  AdaptiveTrie.cpp  AdaptiveTrie.h  NumberIndex.cpp  NumberIndex.h  UnionTreeNode.cpp  UnionTreeNode.h
libs/joda/core/modules/indexing/src/cache/: CacheEntry.cpp  CacheEntry.h  QueryCache.cpp
libs/joda/core/modules/indexing/test/: AdaptiveHistogramTest.cpp  AdaptiveIndexPredicateVisitorTest.cpp  MemoryManagerTest.cpp  NextQueryVisitorTest.cpp  SetPredicateVisitorTest.cpp
libs/joda/core/modules/join/: CMakeLists.txt
libs/joda/core/modules/join/src/: FileJoinManager.cpp  JoinManager.cpp  JoinParser.cpp  MemoryJoinDoc.cpp  MemoryJoinManager.cpp
libs/joda/core/modules/join/src/pipeline/: InnerJoin.cpp  LoadJoin.cpp  LoadJoinFileParser.cpp  LoadJoinFiles.cpp  OuterJoin.cpp  StoreJoin.cpp
libs/joda/core/modules/join/src/relation/: ContainerJoinExecutor.cpp  EqualityJoinExecutor.cpp  ThetaJoinExecutor.cpp
libs/joda/core/modules/misc/: CMakeLists.txt
libs/joda/core/modules/misc/src/: Benchmark.cpp  FileNameRepo.cpp  JSONFileWriter.cpp  MemoryUtility.cpp  OSUtility.cpp  RecurringTimer.cpp  Timer.cpp
libs/joda/core/modules/network/: CMakeLists.txt  module-doc.h
libs/joda/core/modules/network/src/: Favicon.h  JodaServer.cpp
libs/joda/core/modules/network/src/apiv2/: API.cpp  DeleteRequest.cpp  DeleteRequest.h  JodaQueryRequest.cpp  JodaQueryRequest.h  JodaResultRequest.cpp  JodaResultRequest.h  JodaSourceRequest.cpp  JodaSourceRequest.h  ModulePost.cpp  ModulePost.h  ModuleRequest.cpp  ModuleRequest.h  SystemRequest.cpp  SystemRequest.h
libs/joda/core/modules/network/test/: API2Test.cpp  ServerTest.cpp
libs/joda/core/modules/parser/: CMakeLists.txt  module_doc.h
libs/joda/core/modules/parser/src/: ReaderParser.cpp
libs/joda/core/modules/parser/src/parsers/: JSONMetaParser.h  JSONStreamParser.h  JSONTextParser.h
libs/joda/core/modules/parser/src/pipeline/: FileOpener.cpp  InStream.cpp  LSFileMapper.cpp  ListDir.cpp  (+3 more)
libs/joda/core/modules/pipelineatomics/: CMakeLists.txt
libs/joda/core/modules/query/: CMakeLists.txt  module_doc.h
libs/joda/core/modules/query/aggregate/: CMakeLists.txt
libs/joda/core/modules/query/predicate/: CMakeLists.txt
libs/joda/core/modules/query/project/: CMakeLists.txt
libs/joda/core/modules/query/src/: Query.cpp
libs/joda/core/modules/query/values/: CMakeLists.txt
libs/joda/core/modules/queryexecution/: CMakeLists.txt
libs/joda/core/modules/queryexecution/src/: PipelineQueryPlan.cpp  QueryPlan.cpp  QueryThread.cpp  QueryThread.h
libs/joda/core/modules/queryexecution/test/: PipelineTaskSetTest.cpp  PlanTest.cpp  TaskTest.cpp
libs/joda/core/modules/queryparsing/: CMakeLists.txt  module-doc.h
libs/joda/core/modules/queryparsing/src/: Control.h  FunctionWrapper.h  QueryParser.cpp
libs/joda/core/modules/similarity/: CMakeLists.txt
libs/joda/core/modules/similarity/src/: AttributeJaccard.cpp  PathJaccard.cpp  RJAttributeReader.cpp  RJAttributeReader.h  RJPathsReader.cpp  RJPathsReader.h
libs/joda/core/modules/similarity/test/: MeasureTest.cpp  RJAttributeTest.cpp  RJPathTest.cpp
libs/joda/core/modules/storage/: CMakeLists.txt
libs/joda/core/modules/storage/collection/: CMakeLists.txt
libs/joda/core/modules/storage/container/: CMakeLists.txt
libs/joda/core/modules/storage/document/: CMakeLists.txt
libs/joda/core/modules/storage/src/: JSONStorage.cpp
test/: CMakeLists.txt  MiscTest.cpp  coverage.sh.in  gtest.cpp
test/data/json/: formattest.json  numtest.json  viewtest.json
test/modules/aggregation/: bbox.py  empty.py  pyAVG.py  pySTR.py  training.py
test/modules/export/: pyExport.py  writecsv.py  writesql.py
test/modules/import/: pyImport.py  readcsv.py  readsql.py
test/modules/index/: bloom.py  pyCache.py  pyIndex.py
test/modules/value/: language.py  psqlExists.py  pyVAL.py  scale.py  sentiment.py  test_accuracy.py
test/systemtests/: AdaptiveSystemTests.cpp  FullStack.cpp  QueryParsingTest.cpp
(+6819 files in other folders)
